Managed the logic of "accetta" button in "Gestisci" button in supervisor home